<resources>
    <string name="app_name">Daily Sports Tips</string>
    <string name="title_activity_my_dash">MyDash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--test adds-->


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Daily Sports Tips</string>
    <string name="slide_1_desc">The easiest way to make money from betting</string>

    <string name="slide_2_title">Vip Tickets</string>
    <string name="slide_2_desc">We provide three Daily tickets with a higher winning probability!</string>

    <string name="slide_3_title">Great Odds</string>
    <string name="slide_3_desc">Best odds from a team of experts specialized in the analysis from a number of sources!</string>

    <string name="slide_4_title">Livescores</string>
    <string name="slide_4_desc">Follow up the teams livescores directly from the App!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> Daily Sports Tips -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="sure">Sure Tips</string>
    <string name="version">V 1.0.1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="Username">Phone Number</string>
    <string name="Password">Password</string>
    <string name="go">Login</string>
    <string name="infor">"From the Mpesa Menu
1.Select the Lipa na Mpesa then the Buy Goods and Service option
2.Paste Till Number 272950 already Copied.
3.Enter exact Amount of your choice and confirm payment made to Imeja Developers.
4.You will receive confirmation message with your Login Password"</string>    
    <string name="create">To create an account click the icon with the (+) plus</string>
    <string name="title_activity_vip_main">Daily Vip Tips</string>
    <string name="themes"><B>Themes</B>\nSelect a pre-installed theme</string>
    <string name="primary">Primary Color\nDisplayed most frequently across your app</string>
    <string name="accent">Accent Color\nAccent select parts of the User Interface</string>
    <string name="background">Background Color\nThe underlying color of the apps content</string>
    <string name="join_chat">Join Chat</string>
    <string name="support_chat">Contact Support</string>
    <string name="tell_friend">Tell a Friend</string>
    <string name="app_rate">Rate Us</string>
    <string name="app_contact">Contact Us</string>
    <string name="app_terms">Terms of Service</string>
</resources>
