<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Settings.Sub.AppInfor">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="App Infor"
        app:titleTextColor="@color/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
            android:id="@+id/redcolor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10.0dip"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/aa"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/applogo"
                    app:civ_border_color="@color/text"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tell_friend"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_rate"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_contact"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_terms"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="20sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>